fix loading bug, z-index/sizing of autosuggest box

--- a/src/components/Autosuggestion.css
+++ b/src/components/Autosuggestion.css
@@ -4,8 +4,8 @@
 }
 
 .react-autosuggest__input {
-  width: 250px;
-  height: 40px;
+  width: 280px;
+  height: 52px;
   padding: 10px 20px;
   font-weight: 300;
   font-size: 16px;
@@ -37,7 +37,7 @@
   font-size: 16px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  z-index: 2;
+  z-index: 400;
 }
 
 .react-autosuggest__suggestions-list {
